# shuro

./: .gitignore  Cargo.toml  GLOSSARY.md  LICENSE  README.md  config.example.toml
.github/workflows/: README.md  build-macos.yml
src/: cli.rs  config.rs  error.rs  ffmpeg.rs  lib.rs  main.rs  quality.rs  setup.rs  subtitle.rs  translate.rs  whisper.rs  workflow.rs
src/media/: commands.rs  mod.rs  processor.rs
src/transcribe/: README.md  common.rs  mod.rs  openai.rs  whisper_cpp.rs
src/translate/: common.rs  context.rs  llm.rs  mod.rs  nlp.rs  simple.rs
src/whisper/: common.rs  mod.rs  openai.rs  whisper_cpp.rs
