[package]
name = "shuro"
version = "0.1.0"
edition = "2024"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
description = "Automated subtitle translation workflow using whisper-cpp, ollama, and ffmpeg"
license = "Apache-2.0"
repository = "https://github.com/watermint/shuro"
keywords = ["subtitle", "translation", "whisper", "ollama", "ffmpeg", "video"]
categories = ["multimedia", "command-line-utilities"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP client for ollama
reqwest = { version = "0.11", features = ["json"] }

# Async traits  
async-trait = "0.1"

# File system operations
walkdir = "2.4"
tempfile = "3.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Path handling
pathdiff = "0.2"

# Process execution (using tokio's built-in process support)
# tokio already includes process support

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Progress indicators
indicatif = "0.17"

# Internationalization
gettext = "0.4"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.8"

# Mocking
mockall = "0.12"

# Test utilities
assert_fs = "1.1"

[[bin]]
name = "shuro"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = ["."] 